--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,6 @@ set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 set(SOURCE_DIR  "${CMAKE_CURRENT_SOURCE_DIR}/src")
 set(OPENSSL_USE_STATIC_LIBS TRUE)
 
-find_package(OpenSSL REQUIRED)
 
 # Find all source files in the src directory
 file(GLOB_RECURSE PROJECT_FILES
@@ -17,6 +16,6 @@ file(GLOB_RECURSE PROJECT_FILES
 
 add_executable(${PROJECT_NAME} ${PROJECT_FILES})
 target_include_directories(${PROJECT_NAME} PRIVATE ${INCLUDE_DIR})
-target_link_libraries(${PROJECT_NAME} OpenSSL::Crypto)
+target_link_libraries(${PROJECT_NAME} PRIVATE ssl crypto)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 
