somehow thread weirdly work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,35 @@ set(SOURCE_DIR  "${CMAKE_CURRENT_SOURCE_DIR}/src")
 set(OPENSSL_USE_STATIC_LIBS TRUE)
 
 
+if(CRYPTOPP_INCLUDE_PREFIX)
+    set(CRYPTOPP_INCLUDE_PREFIX
+            ${CRYPTOPP_INCLUDE_PREFIX}
+            CACHE STRING
+            "Set the dir where the headers get installed. Defaults to cryptopp."
+    )
+else()
+    set(CRYPTOPP_INCLUDE_PREFIX
+            "cryptopp"
+            CACHE STRING
+            "Set the dir where the headers get installed. Defaults to cryptopp."
+    )
+endif()
+
+if(CRYPTOPP_SOURCES)
+    set(CRYPTOPP_SOURCES
+            ${CRYPTOPP_SOURCES}
+            CACHE PATH
+            "Use the provided location for crypto++ sources; do not fetch"
+    )
+else()
+    set(CRYPTOPP_SOURCES
+            ""
+            CACHE PATH
+            "Use the provided location for crypto++ sources; do not fetch"
+    )
+endif()
+
+
 # Find all source files in the src directory
 file(GLOB_RECURSE PROJECT_FILES
         "${INCLUDE_DIR}/*.h"
@@ -15,6 +44,7 @@ file(GLOB_RECURSE PROJECT_FILES
 )
 
 add_executable(${PROJECT_NAME} ${PROJECT_FILES})
+
 target_include_directories(${PROJECT_NAME} PRIVATE ${INCLUDE_DIR})
 target_link_libraries(${PROJECT_NAME} PRIVATE ssl crypto)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
