--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,15 @@ project(COMP7402_Assignment4)
 set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 set(SOURCE_DIR  "${CMAKE_CURRENT_SOURCE_DIR}/src")
 set(OPENSSL_USE_STATIC_LIBS TRUE)
+set(CMAKE_THREAD_LIBS_INIT "-lpthread")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+set(CMAKE_HAVE_THREADS_LIBRARY 1)
+set(CMAKE_USE_WIN32_THREADS_INIT 0)
+set(CMAKE_USE_PTHREADS_INIT 1)
+set(THREADS_PREFER_PTHREAD_FLAG ON)
 
 
-if(CRYPTOPP_INCLUDE_PREFIX)
+if(CRYPTOPP_INCLUVDE_PREFIX)
     set(CRYPTOPP_INCLUDE_PREFIX
             ${CRYPTOPP_INCLUDE_PREFIX}
             CACHE STRING
